# airheads

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  airheads.sln  plan.md
app/: CMakeLists.txt
app/cmake/: Packaging.cmake  app_assets.cmake  packaging.cmake
app/cmake/packaging/: Linux.cmake  Windows.cmake  linux.cmake
app/src/: airheads.h  app.cpp  app.h  app_window.cpp  app_window.h  appraiser_window.cpp  appraiser_window.h  developer_gui.cpp  developer_gui.h  dpi_handler.h  gui.cpp  gui.h  gui_mat_renderer.cpp  gui_mat_renderer.h  log.cpp  log.h  main.cpp  pixels.h  project_conf.cpp.in  project_conf.h  project_version.cpp.in  project_version.h  resources.h  texture.cpp  texture.h  vec.h  video_capture.cpp  video_capture.h  video_processor.cpp  video_processor.h
app/src/linux/: dpi_handler.cpp  resources.cpp
app/src/mac/: dpi_handler.cpp  resources.cpp
app/src/video_input/: videoInput.cpp  videoInput.h
app/src/video_proc/: blue_filter.cpp  blue_filter.h  cluster.cpp  cluster.h  cluster_map_proc.cpp  cluster_map_proc.h  cluster_proc.cpp  cluster_proc.h  dot_diff.cpp  dot_diff.h  face_detector.cpp  face_detector.h  hsv_filter.cpp  hsv_filter.h  processing_context.cpp  processing_context.h  results_overlay.cpp  results_overlay.h  video_proc.cpp  video_proc.h
app/src/win32/: dpi_handler.cpp  resources.cpp
cmake/: compiler_warnings.cmake  git_version.cmake  git_version.cpp.in  git_version.h  project_settings.cmake
hiopencv/: hiopencv.cpp  hiopencv.vcxproj  hiopencv.vcxproj.filters
